main header is done

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+
+.link-1 {
+    @apply flex items-center gap-3 capitalize font-medium hover:text-gray-600 transition-all;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.link-1:nth-child(odd):not(:first-child) {
+    @apply border-l-2 border-r-2 px-3 border-black;  
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.link-1:first-child {
+    @apply border-r-2  px-3 border-black;  
 }
+
+
+
